[package]
name = "transactions_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
echodb = "0.7"
rmp-serde = "1.3"
mio = "1.0"
tokio = { version = "1.39", features = ["full"] }
